fix text alignment

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ button:hover {
 
 .box-subtext {
     text-align: center;
-    margin: 0 17px;
+    margin: 0 18px;
     width: 100px;
     border-radius: 10px;
     display: flex;
